# PC_MONITOR_GRAFANA

./: .gitignore  .pyre_configuration  METRICS_SCHEMA.md  README.md  config.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
bytetech_agent/: __main__.py  app.py  config.py  installer_helpers.py  logging_setup.py
bytetech_agent/models/: metrics.py
bytetech_agent/normalizers/: influx_formatter.py
bytetech_agent/providers/: base.py  display_provider.py  fps_provider.py  lhm_provider.py  nvapi_provider.py  presentmon_provider.py  presentmon_service_api.py  presentmon_service_provider.py  rtss_provider.py  system_provider.py
bytetech_agent/services/: health.py  scheduler.py
bytetech_agent/tools/: dump_metrics.py  presentmon_stdout_probe.py  rtss_probe.py
bytetech_agent/writers/: influx_writer.py
examples/: config.example.yaml
install/: install.ps1  uninstall.ps1
tests/: test_config.py  test_health.py  test_installer_helpers.py  test_normalizer.py  test_presentmon_provider.py  test_presentmon_service_api.py  test_presentmon_service_provider.py  test_providers.py  test_rtss_provider.py  test_writer.py
